almost done with misc docs